--- a/2.4 Movie Ranking Project/index.html
+++ b/2.4 Movie Ranking Project/index.html
@@ -1,1 +1,15 @@
 <!-- Write your code below -->
+
+<h1>The Best Movies According to Georgina</h1>
+<h2>My Top 3 Favorite Movies of All-time</h2>
+
+<hr />
+
+<h3>The Full Monty</h3>
+<p>Wicked Sense of humor</p>
+
+<h3>Hot Fuzz</h3>
+<p> Really cool action comedy</p>
+
+<h3>Shaun of the Dead</h3>
+<p>Zombies</p>
